--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h3 class="float-md-start mb-3">Mike's Web Site</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <!-- <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a> -->
-          <a class="nav-link fw-bold py-1 px-0" href="https://github.com/MikaelViCo/My-Web-Page">Education</a>
+          <a class="nav-link fw-bold py-1 px-0" href="./public/education.html">Education</a>
           <a class="nav-link fw-bold py-1 px-0" href="./public/industrial d.html">Industrial Design</a>
           <a class="nav-link fw-bold py-1 px-0" href="./public/web design.html">Web designer</a>
           <a class="nav-link fw-bold py-1 px-0" href="./public/contact me.html">Contact me</a>
